# ai_cup_22_solution

./: .gitignore  LICENSE  README.md
ai_cup_trainer/: CMakeLists.txt  bootstrap_client.sh  bootstrap_server.sh  main.cpp
bt_impl/: CMakeLists.txt  Dockerfile  MyStrategy.cpp  MyStrategy.hpp  TcpStream.cpp  TcpStream.hpp  main.cpp
bt_impl/behavior_nodes/: GoToTarget.cpp  GoToTarget.h  LookAction.cpp  LookAction.h
bt_impl/behaviors/: main_behavior.xml  test_avoidzone.xml  test_dodge.xml  test_dodge_hunt.xml  test_getclosesttarget.xml  test_gocenter.xml  test_gototarget.xml  test_hunt.xml  test_look.xml  test_move.xml  test_shoot.xml
bt_impl/codegame/: ServerMessage.cpp  ServerMessage.hpp
bt_impl/model/: Game.cpp  Game.hpp  Unit.cpp  Unit.hpp  UnitOrder.cpp  UnitOrder.hpp  Vec2.cpp  Vec2.hpp  Zone.cpp  Zone.hpp
game_server/: config.json  preferences.json
rl_impl/: main.py  my_strategy.py
rl_impl/sacnet/: network.py  train.py  utils.py
